tests/baselines/reference/computedPropertyNamesContextualType1_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType1_ES5.ts(7,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType1_ES5.ts(8,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType1_ES5.ts (2 errors) ====
    interface I {
        [s: string]: (x: string) => number;
        [s: number]: (x: any) => number; // Doesn't get hit
    }
    
    var o: I = {
        ["" + 0](y) { return y.length; },
        ~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ["" + 1]: y => y.length
        ~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }